# shell-elem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  compile.sh
1st_check/: stent_m.plt  stent_material.eps  stent_o.plt  stent_oversizing.eps  surgery_m.plt  surgery_material.eps  surgery_o.plt  surgery_oversizing.eps
2nd_check/: aneurysm_g.plt  aneurysm_gain.eps  aneurysm_gain_time.eps  aneurysm_gt.plt  aneurysm_m.plt  aneurysm_material.eps  aneurysm_material_time.eps  aneurysm_mt.plt  aneurysm_p.plt  aneurysm_penal.eps  aneurysm_penal_time.eps  aneurysm_pt.plt  aneurysm_r.plt  aneurysm_ratio.eps  aneurysm_ratio_time.eps  aneurysm_rt.plt  stent_e.plt  stent_error.eps  stent_g.plt  stent_gain.eps  stent_o.plt  stent_oversizing.eps  stent_p.plt  stent_penal.eps  stent_r.plt  stent_ratio.eps  stent_s.plt  stent_stiffness.eps
3rd_check/aneurysm/: aneurysm_g01.rsn  aneurysm_g03.rsn  aneurysm_g04.rsn  aneurysm_p7.rsn  aneurysm_p9.rsn  aneurysm_r15.rsn  aneurysm_r85.rsn  aneurysm_ref.rsn  gain.eps  gain.py  penalty.eps  penalty.py  ratio.eps  ratio.py  sensitivity_gain.eps  sensitivity_penalty.eps  sensitivity_ratio.eps
3rd_check/stent/: gain.eps  gain.py  gain_chart_cn.eps  gain_chart_cn.py  gain_chart_o.eps  gain_chart_o.py  normal.eps  normal.py  oversizing.eps  oversizing.py  penalty.eps  penalty.py  ratio.eps  ratio.py  sensitivity_gain.eps  sensitivity_normal.eps  sensitivity_oversizing.eps  sensitivity_penalty.eps  sensitivity_ratio.eps  stent_cn25.rsn  stent_cn75.rsn  stent_ct06.rsn  stent_ct14.rsn  stent_g01.rsn  stent_g01cn25.rsn  stent_g01cn50.rsn  stent_g01cn75.rsn  stent_g01o05.rsn  stent_g01o15.rsn  stent_g01o20.rsn  stent_g02cn25.rsn  stent_g02cn75.rsn  stent_g02o05.rsn  stent_g02o15.rsn  stent_g02o20.rsn  stent_g03.rsn  stent_g03cn25.rsn  stent_g03cn50.rsn  stent_g03cn75.rsn  stent_g03o05.rsn  (+20 more)
3rd_check/surgery/: gain.eps  gain.py  gain_chart_cn.eps  gain_chart_cn.py  gain_chart_o.eps  gain_chart_o.py  normal.eps  normal.py  oversizing.eps  oversizing.py  penalty.eps  penalty.py  ratio.eps  ratio.py  sensitivity_gain.eps  sensitivity_normal.eps  sensitivity_oversizing.eps  sensitivity_penalty.eps  sensitivity_ratio.eps  surgery_cn25.rsn  surgery_cn75.rsn  surgery_ct06.rsn  surgery_ct14.rsn  surgery_g01.rsn  surgery_g01cn25.rsn  surgery_g01cn75.rsn  surgery_g01o05.rsn  (+33 more)
review_0/: aneurysm_deg.py  aneurysm_den.rsn  aneurysm_ref.rsn  aneurysm_space_degradation.eps  aneurysm_time_degradation.eps  surgery_deg.py  surgery_den.rsn  surgery_gndra_degradation.eps  surgery_gndrb_degradation.eps  surgery_stent_degradation.eps  surgery_time_degradation.eps
source/: example.f90  example.mod  test.jl
src/: CMakeLists.txt  arrays_mod_bak.f90  arrays_mod_bak2.f90  assembler.f90  computation.f90  control.f90  ctrl_mod.f90  datainp.f90  esets_mod.f90  esets_mod_bak.f90  geometry.f90  history_mod.f90  info_mod.f90  initial_comp_0.f90  initial_comp_t.f90  input_mod.f90  inttoch.f90  inverse.f90  iteration.f90  load_mod.f90  load_mod_bak.f90  main.f90  material.f90  material_mod.f90  membrane2d_mod.f90  model_mod.f90  nsets_mod.f90  nsets_mod_bak.f90  output.f90  param_mod.f90  quadrature_mod.f90  shape_mod.f90  shell2d_mod.f90  shell2d_mod_bak.f90  shell3d_mod.f90  step_mod.f90  to_paraview.f90
(+99 files in other folders)
